Fix insert comment dialog's avatar size
Avatar images was not aligned to its parent element and looked like it
was out of that parent "circle". A box size property was getting inherit
from generic vex style sheet
	-Make sure the box size of the parent avatar image:
	.cool-annotation-img is calculated with the width of any border or
	padding added to the final rendered width, making the element wider
	than 32px.

--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -637,6 +637,7 @@ nav.drawing-color-indicator ~ #main-document-content .oxool-annotation-reply-cou
 }
 
 .oxool-annotation-img {
+	box-sizing: content-box !important;
 	max-width: 32px;
 	display: inline-block;
 	border: solid 2px;
